# abd-vro-skeleton-projects

./: .bandit  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint_gh_actions.yaml  test-lint.yml
python-skeleton/: .gitignore  .pre-commit-config.yaml  README.md  getting_started.md  pyproject.toml
python-skeleton/.github/: dependabot.yml
python-skeleton/.github/workflows/: test-lint.yml
